# gists

./: flake.nix
.github/workflows/: what-is-truthy.yaml
brokenQueryParams/: README.md  flake.nix
brokenQueryParams/back/: back.cabal  package.yaml
brokenQueryParams/back/src/API/: TH.hs
brokenQueryParams/back/src/API/Endpoints/API1/: News.hs
brokenQueryParams/back/src/API/Types/: News.hs  User.hs
brokenQueryParams/back/src/Common/: TH.hs
brokenQueryParams/back/src/Controller/: News.hs
brokenQueryParams/back/src/Persist/: Model.hs  News.hs
brokenQueryParams/back/src/Persist/Types/: News.hs  User.hs
brokenQueryParams/back/src/Server/: Config.hs  Server.hs
brokenQueryParams/back/src/Service/Types/: News.hs  User.hs
brokenQueryParams/test/src/Integration/: MainTest.hs
debugStackOnWindowsGHA/: errors.md
developPackage/: CHANGELOG.md  LICENSE  flake.nix  problem.cabal
devenvComposeDevshells/: .envrc  flake.nix  readme.md  shells-compose.cast
devenvComposeDevshells/a/: .envrc  a.nix
devenvComposeDevshells/b/: .envrc  b.nix
devshellAndShellFor/: .envrc  README.md  flake.nix
devshellAndShellFor/package1/: package.yaml  package1.cabal
devshellAndShellFor/package1/src/: Lib1.hs
devshellAndShellFor/package2/src/: Lib2.hs
devshellFlakeParts/: flake.nix  module1.nix  module2.nix  module3.nix
flakeUtilsExample/: flake.nix
flakeUtilsOverrideSystems/: flake.nix  nix-systems.nix
functionTo/: flake.nix
haskellFlakeDefaultsToolsCantNullify/: flake.nix
haskellPackage/: README.md  default.nix  flake.nix
hlsBringsGHC/: flake.nix
hlsEvalPluginSetupDoesntImportFromLocalModule/: LICENSE  demo.cabal  flake.nix
hlsEvalPluginSetupDoesntImportFromLocalModule/src/: AnotherModule.hs  MyLib.hs
modelsMidterm/: reflectionOnTools copy.md  reflectionOnTools.md
modulesBug/: flake.nix
msChallenge/: light.txt
nixosShell/: flake.nix
noFlakeUtils/: flake.nix
overrideOptionWithTypeSubmodule/: flake.nix
overrideWriteShellApplication/: flake.nix
pkgsStatic/: flake.nix
pkgsStatic/back/: back.cabal  package.yaml
pkgsStatic/back/app/: Main.hs
pkgsStatic/back/src/: Lib.hs
pkgsStatic/test/: cabal.project  test.cabal
pkgsStatic/test/app/: Main.hs
pkgsStatic/test/src/: Test.hs
purifixProject/: .gitignore  flake.nix  spago.yaml
purifixProject/src/: Main.purs
purifixTrouble/: flake.nix  spago.yaml
qqliterals/: flake.nix  nix-managed.cabal  package.yaml
qqliterals/src/: Lib.hs  Validate.hs
skippedDeps/: flake.nix  telegram-bot-api.cabal
slimlockBuildCommand/: flake.nix
tryP2N/: flake.nix  pyproject.toml
tryPoetry2Nix/: flake.nix
tryPoetry2Nix/app/: main.py
