cabal-version: 1.12

name:           telegram-bot-api
version:        6.5.1
synopsis:       Easy to use library for building Telegram bots. Exports Telegram Bot API.
description:    Please see the README on Github at <https://github.com/fizruk/telegram-bot-simple#readme>
                .
                For official Bot API see Telegram Bot API at <https://core.telegram.org/bots/api>
category:       Web
homepage:       https://github.com/fizruk/telegram-bot-simple#readme
bug-reports:    https://github.com/fizruk/telegram-bot-simple/issues
author:         Nickolay Kudasov
maintainer:     nickolay.kudasov@gmail.com
copyright:      Nickolay Kudasov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fizruk/telegram-bot-simple

library
  exposed-modules:
  other-modules:
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cron >=0.7.0
    , filepath
    , hashable
    , http-api-data
    , http-client
    , http-client-tls
    , monad-control
    , mtl
    , pretty-show
    , profunctors
    , servant
    , servant-client
    , servant-multipart-api
    , servant-multipart-client
    , servant-server
    , split
    , stm
    , template-haskell
    , text
    , time
    , transformers
    , unordered-containers
    , warp
    , warp-tls
  default-language: Haskell2010
  default-extensions:
    TemplateHaskell
