[tool.poetry]
name = "app"
version = "0.1.0"
description = "app to show the current MSK time"
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"
grequests = "^0.6.0"
httpx = "^0.23.3"
nltk = "^3.8.1"
pandas = "^1.5.3"
selenium = "^4.8.2"
ipykernel = "^6.21.2"
jupyter = "^1.0.0"
mypy = "^1.0.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.3"
manage-fastapi = "^1.1.1"
pylint = "^2.15.3"

[tool.poetry.scripts]
app = 'app.main:main'

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"